rnc/src/snapshots/muffy_rnc__tests__parse_file-39.snap
---
source: rnc/src/lib.rs
expression: parse_schema(&read_to_string(&path).unwrap()).unwrap()
---
Schema {
    declarations: [
        DefaultNamespace(
            "http://www.w3.org/2000/svg",
        ),
        Namespace(
            NamespaceDeclaration {
                prefix: "a",
                uri: "http://relaxng.org/ns/compatibility/annotations/1.0",
            },
        ),
    ],
    body: Pattern(
        Grammar(
            Grammar {
                items: [
                    Define(
                        Definition {
                            name: "ClipPathValue.datatype",
                            combine: None,
                            pattern: Name(
                                Name {
                                    prefix: Some(
                                        "xsd",
                                    ),
                                    local: "string",
                                },
                            ),
                        },
                    ),
                    Annotation(
                        Annotation {
                            name: Name {
                                prefix: Some(
                                    "a",
                                ),
                                local: "documentation",
                            },
                            attributes: [],
                        },
                    ),
                    Define(
                        Definition {
                            name: "SVG.Clip.extra.attrib",
                            combine: None,
                            pattern: Empty,
                        },
                    ),
                    Define(
                        Definition {
                            name: "SVG.Clip.attrib",
                            combine: Some(
                                Interleave,
                            ),
                            pattern: Group(
                                [
                                    Optional(
                                        Attribute {
                                            name_class: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "clip-path",
                                                },
                                            ),
                                            pattern: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "ClipPathValue.datatype",
                                                },
                                            ),
                                        },
                                    ),
                                    Optional(
                                        Attribute {
                                            name_class: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "clip-rule",
                                                },
                                            ),
                                            pattern: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "ClipFillRule.datatype",
                                                },
                                            ),
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Clip.extra.attrib",
                                        },
                                    ),
                                ],
                            ),
                        },
                    ),
                    Annotation(
                        Annotation {
                            name: Name {
                                prefix: Some(
                                    "a",
                                ),
                                local: "documentation",
                            },
                            attributes: [],
                        },
                    ),
                    Define(
                        Definition {
                            name: "SVG.Clip.extra.class",
                            combine: None,
                            pattern: NotAllowed,
                        },
                    ),
                    Define(
                        Definition {
                            name: "SVG.Clip.class",
                            combine: Some(
                                Choice,
                            ),
                            pattern: Choice(
                                [
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "clipPath",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Clip.extra.class",
                                        },
                                    ),
                                ],
                            ),
                        },
                    ),
                    Annotation(
                        Annotation {
                            name: Name {
                                prefix: Some(
                                    "a",
                                ),
                                local: "documentation",
                            },
                            attributes: [],
                        },
                    ),
                    Define(
                        Definition {
                            name: "SVG.clipPath.class",
                            combine: None,
                            pattern: Choice(
                                [
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "rect",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Animation.class",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Use.class",
                                        },
                                    ),
                                ],
                            ),
                        },
                    ),
                    Define(
                        Definition {
                            name: "SVG.clipPath.content",
                            combine: None,
                            pattern: Group(
                                [
                                    Many0(
                                        Name(
                                            Name {
                                                prefix: None,
                                                local: "SVG.Description.class",
                                            },
                                        ),
                                    ),
                                    Many0(
                                        Name(
                                            Name {
                                                prefix: None,
                                                local: "SVG.clipPath.class",
                                            },
                                        ),
                                    ),
                                ],
                            ),
                        },
                    ),
                    Define(
                        Definition {
                            name: "clipPath",
                            combine: None,
                            pattern: Element {
                                name_class: Name(
                                    Name {
                                        prefix: None,
                                        local: "clipPath",
                                    },
                                ),
                                pattern: Group(
                                    [
                                        Name(
                                            Name {
                                                prefix: None,
                                                local: "attlist.clipPath",
                                            },
                                        ),
                                        Name(
                                            Name {
                                                prefix: None,
                                                local: "SVG.clipPath.content",
                                            },
                                        ),
                                    ],
                                ),
                            },
                        },
                    ),
                    Define(
                        Definition {
                            name: "attlist.clipPath",
                            combine: Some(
                                Interleave,
                            ),
                            pattern: Group(
                                [
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Core.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Conditional.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Style.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Text.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.TextContent.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Font.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Paint.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Color.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Opacity.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Graphics.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Clip.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Mask.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Filter.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Cursor.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.External.attrib",
                                        },
                                    ),
                                    Optional(
                                        Attribute {
                                            name_class: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "transform",
                                                },
                                            ),
                                            pattern: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "TransformList.datatype",
                                                },
                                            ),
                                        },
                                    ),
                                    Optional(
                                        Attribute {
                                            name_class: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "clipPathUnits",
                                                },
                                            ),
                                            pattern: Choice(
                                                [
                                                    Value {
                                                        name: None,
                                                        value: "userSpaceOnUse",
                                                    },
                                                    Value {
                                                        name: None,
                                                        value: "objectBoundingBox",
                                                    },
                                                ],
                                            ),
                                        },
                                    ),
                                ],
                            ),
                        },
                    ),
                ],
            },
        ),
    ),
}
