rnc/src/snapshots/muffy_rnc__tests__parse_file-46.snap
---
source: rnc/src/lib.rs
expression: parse_schema(&read_to_string(&path).unwrap()).unwrap()
---
Schema {
    declarations: [
        DefaultNamespace(
            "http://www.w3.org/2000/svg",
        ),
        Namespace(
            NamespaceDeclaration {
                prefix: "a",
                uri: "http://relaxng.org/ns/compatibility/annotations/1.0",
            },
        ),
    ],
    body: Pattern(
        Grammar(
            Grammar {
                items: [
                    Define(
                        Definition {
                            name: "ExtensionList.datatype",
                            combine: None,
                            pattern: Name(
                                Name {
                                    prefix: Some(
                                        "xsd",
                                    ),
                                    local: "string",
                                },
                            ),
                        },
                    ),
                    Define(
                        Definition {
                            name: "FeatureList.datatype",
                            combine: None,
                            pattern: Name(
                                Name {
                                    prefix: Some(
                                        "xsd",
                                    ),
                                    local: "string",
                                },
                            ),
                        },
                    ),
                    Annotation(
                        Annotation {
                            name: Name {
                                prefix: Some(
                                    "a",
                                ),
                                local: "documentation",
                            },
                            attributes: [],
                        },
                    ),
                    Define(
                        Definition {
                            name: "SVG.Conditional.extra.attrib",
                            combine: None,
                            pattern: Empty,
                        },
                    ),
                    Define(
                        Definition {
                            name: "SVG.Conditional.attrib",
                            combine: Some(
                                Interleave,
                            ),
                            pattern: Group(
                                [
                                    Optional(
                                        Attribute {
                                            name_class: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "requiredFeatures",
                                                },
                                            ),
                                            pattern: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "FeatureList.datatype",
                                                },
                                            ),
                                        },
                                    ),
                                    Optional(
                                        Attribute {
                                            name_class: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "requiredExtensions",
                                                },
                                            ),
                                            pattern: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "ExtensionList.datatype",
                                                },
                                            ),
                                        },
                                    ),
                                    Optional(
                                        Attribute {
                                            name_class: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "systemLanguage",
                                                },
                                            ),
                                            pattern: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "LanguageCodes.datatype",
                                                },
                                            ),
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Conditional.extra.attrib",
                                        },
                                    ),
                                ],
                            ),
                        },
                    ),
                    Annotation(
                        Annotation {
                            name: Name {
                                prefix: Some(
                                    "a",
                                ),
                                local: "documentation",
                            },
                            attributes: [],
                        },
                    ),
                    Define(
                        Definition {
                            name: "SVG.Conditional.extra.class",
                            combine: None,
                            pattern: NotAllowed,
                        },
                    ),
                    Define(
                        Definition {
                            name: "SVG.Conditional.class",
                            combine: Some(
                                Choice,
                            ),
                            pattern: Choice(
                                [
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "switch",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Conditional.extra.class",
                                        },
                                    ),
                                ],
                            ),
                        },
                    ),
                    Annotation(
                        Annotation {
                            name: Name {
                                prefix: Some(
                                    "a",
                                ),
                                local: "documentation",
                            },
                            attributes: [],
                        },
                    ),
                    Define(
                        Definition {
                            name: "SVG.switch.content",
                            combine: None,
                            pattern: Group(
                                [
                                    Many0(
                                        Name(
                                            Name {
                                                prefix: None,
                                                local: "SVG.Description.class",
                                            },
                                        ),
                                    ),
                                    Many0(
                                        Choice(
                                            [
                                                Name(
                                                    Name {
                                                        prefix: None,
                                                        local: "svg",
                                                    },
                                                ),
                                                Name(
                                                    Name {
                                                        prefix: None,
                                                        local: "g",
                                                    },
                                                ),
                                                Name(
                                                    Name {
                                                        prefix: None,
                                                        local: "use",
                                                    },
                                                ),
                                                Name(
                                                    Name {
                                                        prefix: None,
                                                        local: "text",
                                                    },
                                                ),
                                                Name(
                                                    Name {
                                                        prefix: None,
                                                        local: "SVG.Animation.class",
                                                    },
                                                ),
                                                Name(
                                                    Name {
                                                        prefix: None,
                                                        local: "SVG.Conditional.class",
                                                    },
                                                ),
                                                Name(
                                                    Name {
                                                        prefix: None,
                                                        local: "SVG.Image.class",
                                                    },
                                                ),
                                                Name(
                                                    Name {
                                                        prefix: None,
                                                        local: "SVG.Shape.class",
                                                    },
                                                ),
                                                Name(
                                                    Name {
                                                        prefix: None,
                                                        local: "SVG.Hyperlink.class",
                                                    },
                                                ),
                                            ],
                                        ),
                                    ),
                                ],
                            ),
                        },
                    ),
                    Define(
                        Definition {
                            name: "switch",
                            combine: None,
                            pattern: Element {
                                name_class: Name(
                                    Name {
                                        prefix: None,
                                        local: "switch",
                                    },
                                ),
                                pattern: Group(
                                    [
                                        Name(
                                            Name {
                                                prefix: None,
                                                local: "attlist.switch",
                                            },
                                        ),
                                        Name(
                                            Name {
                                                prefix: None,
                                                local: "SVG.switch.content",
                                            },
                                        ),
                                    ],
                                ),
                            },
                        },
                    ),
                    Define(
                        Definition {
                            name: "attlist.switch",
                            combine: Some(
                                Interleave,
                            ),
                            pattern: Group(
                                [
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Core.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Conditional.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Style.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Presentation.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.GraphicalEvents.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.External.attrib",
                                        },
                                    ),
                                    Optional(
                                        Attribute {
                                            name_class: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "transform",
                                                },
                                            ),
                                            pattern: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "TransformList.datatype",
                                                },
                                            ),
                                        },
                                    ),
                                ],
                            ),
                        },
                    ),
                ],
            },
        ),
    ),
}
